--- a/Android源码分析/输入系统/输入事件的派发.md
+++ b/Android源码分析/输入系统/输入事件的派发.md
@@ -373,10 +373,87 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 已知Android输入系统派发的终点是`InputEventReceiver`(根据深入理解Android第五章得出),那么作为控件系统最高级别的管理者`ViewRootImpl`,其便是`InputEventReceiver`的一个用户,它从`InputEventReceiver`中获取事件,然后将它们按照一定流程派发给所有感兴趣的对象,包括`View,PhoneWindow,Activity,Dialog`等,因此从`InputEventReceiver.onInputEvent()`开始讨论
 
 
-## 4.1 ViewRootImpl的输入事件队列
+在`ViewRootImpl.setView()`方法中,会利用WMS分配的`InputChannel`以及当前线程的`Looper`创建`InputEventReceiver`的子类`WindowInputEventReceiver`的一个实例,并保存在`ViewRootImpl.mInputEventReceiver`中.
 
-在`ViewRootImpl.setView()`方法中,会利用WMS分配的`InputChannel`以及当前线程的`Looper`创建`InputEventReceiver`的子类`WindowInputEventReceiver`的一个实例,并保存在`ViewRootImpl.mInputEventReceiver`中.**这标志着从设备驱动到本窗口的输入事件通道的正式建立,每当有输入事件到来,`ViewRootImpl`都可以通过`WindowInputEventReceiver.onInputEvent()`回调获得该事件并对其进行处理**
+- **这标志着从设备驱动到本窗口的输入事件通道的正式建立,每当有输入事件到来,`ViewRootImpl`都可以通过`WindowInputEventReceiver.onInputEvent()`回调获得该事件并对其进行处理**
 
+## 4.1 ViewRootImpl.setView()
+
+
+    public void setView(View view, WindowManager.LayoutParams attrs, View panelParentView) {
+        synchronized (this) {
+            if (mView == null) {
+
+				..............省略不相关代码...............
+				//创建过程
+                if (mInputChannel != null) {
+                    if (mInputQueueCallback != null) {
+                        mInputQueue = new InputQueue();
+                        mInputQueueCallback.onInputQueueCreated(mInputQueue);
+                    }
+                    mInputEventReceiver = new WindowInputEventReceiver(mInputChannel,
+                            Looper.myLooper());
+                }
+				............省略代码..............
+
+                // 设置输入管道
+                CharSequence counterSuffix = attrs.getTitle();
+                mSyntheticInputStage = new SyntheticInputStage();
+                InputStage viewPostImeStage = new ViewPostImeInputStage(mSyntheticInputStage);
+                InputStage nativePostImeStage = new NativePostImeInputStage(viewPostImeStage,
+                        "aq:native-post-ime:" + counterSuffix);
+                InputStage earlyPostImeStage = new EarlyPostImeInputStage(nativePostImeStage);
+                InputStage imeStage = new ImeInputStage(earlyPostImeStage,
+                        "aq:ime:" + counterSuffix);
+                InputStage viewPreImeStage = new ViewPreImeInputStage(imeStage);
+                InputStage nativePreImeStage = new NativePreImeInputStage(viewPreImeStage,
+                        "aq:native-pre-ime:" + counterSuffix);
+				//NativePreImeInputStage
+                mFirstInputStage = nativePreImeStage;
+				//EarlyPostImeInputStage
+                mFirstPostImeInputStage = earlyPostImeStage;
+                mPendingInputEventQueueLengthCounterName = "aq:pending:" + counterSuffix;
+            }
+        }
+    }
+
+- `InputStage`的构造函数中,会传入另外一个`InputStage`,这个Stage会被保存在成员变量`mNext`中,作为事件转发时的下一个目标来使用
+
+各个`InputStage`的作用
+
+1. `NativePreImeInputStage`:
+
+	Delivers pre-ime input events to a native activity.
+	Does not support pointer events.
+
+2. `ViewPreImeInputStage`:
+
+	 Delivers pre-ime input events to the view hierarchy.
+	 Does not support pointer events.
+
+3. `ImeInputStage`:
+
+	 Delivers input events to the ime.
+	 Does not support pointer events.
+
+4. `EarlyPostImeInputStage`:
+
+	Performs early processing of post-ime input events.
+
+5. `NativePostImeInputStage`:
+
+	Delivers post-ime input events to a native activity.
+
+6. `ViewPostImeInputStage`:
+
+	Delivers post-ime input events to the view hierarchy.
+
+7. `SyntheticInputStage` :
+
+	Performs synthesis of new input events from unhandled input events.
+
+
+## 4.1.1 ViewRootImpl.WindowInputEventReceiver 类
 
     final class WindowInputEventReceiver extends InputEventReceiver {
         public WindowInputEventReceiver(InputChannel inputChannel, Looper looper) {
@@ -406,7 +483,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         }
     }
 
-### 4.1.1 ViewRootImpl.enqueueInputEvent()
+### 4.1.2 ViewRootImpl.enqueueInputEvent()
 
     void enqueueInputEvent(InputEvent event,
             InputEventReceiver receiver, int flags, boolean processImmediately) {
@@ -418,13 +495,18 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
      	//将新建的QueuedInputEvent 追加到mPendingInputEventTail所表示的单向链表中
 		// ViewRootImpl 将会沿着链表从头到尾的逐个处理输入事件
         QueuedInputEvent last = mPendingInputEventTail;
+		//待处理事件尾部为空,说明这是第一次处理这个事件
         if (last == null) {
+			//待处理事件的头部 赋值
             mPendingInputEventHead = q;
+			//待处理事件的尾部 赋值
             mPendingInputEventTail = q;
         } else {
             last.mNext = q;
+			//更新待处理事件尾部
             mPendingInputEventTail = q;
         }
+		//待处理事件数量+1
         mPendingInputEventCount += 1;
 
         if (processImmediately) {
@@ -440,9 +522,28 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 - 对于正常事件来说`processImmediately`通常为true
 
+#### 4.1.2.1 ViewRootImpl.obtainQueuedInputEvent()
 
-### 4.1.2 ViewRootImpl.doProcessInputEvents()
+    private QueuedInputEvent obtainQueuedInputEvent(InputEvent event,
+            InputEventReceiver receiver, int flags) {
+        QueuedInputEvent q = mQueuedInputEventPool;
+        if (q != null) {
+            mQueuedInputEventPoolSize -= 1;
+            mQueuedInputEventPool = q.mNext;
+            q.mNext = null;
+        } else {
+            q = new QueuedInputEvent();
+        }
 
+        q.mEvent = event;
+        q.mReceiver = receiver;
+        q.mFlags = flags;
+        return q;
+    }
+
+- 将`InputEvent` 和对应的`InputEventReceiver` 封装为一个`QueuedInputEvent`.如果存在可复用的对象就会复用
+
+### 4.1.3 ViewRootImpl.doProcessInputEvents()
 
     void doProcessInputEvents() {
         // 处理输入事件队列中的事件
@@ -463,15 +564,20 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 ## 4.2 事件处理逻辑的分歧(ViewRootImpl)
 
     private void deliverInputEvent(QueuedInputEvent q) {
-
+		// 用于输出一致性测试日志
         if (mInputEventConsistencyVerifier != null) {
             mInputEventConsistencyVerifier.onInputEvent(q.mEvent, 0);
         }
 
         InputStage stage;
+		// 判断QueuedInputEvent 中的mFlags中是否存在 FLAG_UNHANDLED 标记
+		// 第一次进来应该是不存在的
         if (q.shouldSendToSynthesizer()) {
+			// SyntheticInputStage
             stage = mSyntheticInputStage;
         } else {
+			// mFirstPostImeInputStage   = EarlyPostImeInputStage
+			// mFirstInputStage  =   NativePreImeInputStage
             stage = q.shouldSkipIme() ? mFirstPostImeInputStage : mFirstInputStage;
         }
 
@@ -482,34 +588,31 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         }
     }
 
-### 4.2.1 InputEventConsistencyVerifier.onInputEvent()
+### 4.2.1 QueuedInputEvent.shouldSendToSynthesizer()
 
-    public void onInputEvent(InputEvent event, int nestingLevel) {
-        if (event instanceof KeyEvent) {
-			//处理按键事件
-            final KeyEvent keyEvent = (KeyEvent)event;
-            onKeyEvent(keyEvent, nestingLevel);
-        } else {
-            final MotionEvent motionEvent = (MotionEvent)event;
-            if (motionEvent.isTouchEvent()) {
-				//处理触摸事件
-                onTouchEvent(motionEvent, nestingLevel);
-            } else if ((motionEvent.getSource() & InputDevice.SOURCE_CLASS_TRACKBALL) != 0) {
-				//处理轨迹球事件
-                onTrackballEvent(motionEvent, nestingLevel);
-            } else {
-				//处理其他Motion事件,如悬浮(Hover),游戏手柄等
-                onGenericMotionEvent(motionEvent, nestingLevel);
+        public boolean shouldSendToSynthesizer() {
+            if ((mFlags & FLAG_UNHANDLED) != 0) {
+                return true;
             }
+
+            return false;
         }
-    }
+- 判断`mFlags`中是否存在`FLAG_UNHANDLED`标记
 
-- 根据`InputEvent`的类型 或 `Source`的不同,会分别用4个方法处理4种类型的事件
+### 4.2.2 QueuedInputEvent.shouldSkipTme()
 
-	1. `onKeyEvent()`:用于派发按键类型的事件. 基于焦点的派发策略
-	2. `onTouchEvent()`:用于派发标准的触摸事件. 基于位置的派发策略
-	3. `onTrackballEvent()`: 用于派发轨迹球事件.
-	4. `onGenericMotionEvent()`:派发其他的`Motion`事件
+        public boolean shouldSkipIme() {
+            if ((mFlags & FLAG_DELIVER_POST_IME) != 0) {
+                return true;
+            }
+			//判断类型是否为 MotionEvent
+			//并且事件的来源是 与显示器相关联的指示器设备 或 SOURCE_ROTARY_ENCODER
+            return mEvent instanceof MotionEvent
+                    && (mEvent.isFromSource(InputDevice.SOURCE_CLASS_POINTER)
+                        || mEvent.isFromSource(InputDevice.SOURCE_ROTARY_ENCODER));
+        }
+
+- `mEvent`在`ViewRootImpl.obtainQueuedInputEvent()`中被赋值.其代表的就是一个原始的`InputEvent`
 
 
 ## 4.3 事件处理逻辑的终点(ViewRootImpl)
@@ -536,154 +639,141 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 # 5. 事件的派发分析
 
-根据 第四节可知,事件处理会根据`InputEvent`类型 或 `Source`类型采取不同的处理逻辑,现在仅分析触摸事件
+**从4.2节得知事件的处理会调用`InputStage`的`deliver()`.**
 
-## 5.1 触摸事件的派发
+- `InputStage`是一个抽象类,其有`EarlyPostImeInputStage`,`SyntheticInputStage`,`NativePreImeInputStage`等子类
 
-触摸事件是基于位置进行派发,由于坐标系变换,多点触摸的存在十分复杂
+- `ViewRootImpl`并不需要将触摸事件派发给输入法,因为`InputDispatcher`会将点击到输入法的窗口的事件直接派发给它,而不需要通过`ViewRootImpl`
 
-`ViewRootImpl`并不需要将触摸事件派发给输入法,因为`InputDispatcher`会将点击到输入法的窗口的事件直接派发给它,而不需要通过`ViewRootImpl`
+## 5.1 InputStage.deliver()
 
-## 5.2 InputEventConsistencyVerifier.onTouchEvent()
+        public final void deliver(QueuedInputEvent q) {
+			// 判断事件是否已经结束
+            if ((q.mFlags & QueuedInputEvent.FLAG_FINISHED) != 0) {
+				// 已经结束,将事件转发给下一个
+                forward(q);
+			//判断事件是否需要被丢弃
+			// 主要会对视图是否已经添加,焦点是否正常获取进行检查
+            } else if (shouldDropInputEvent(q)) {
+                finish(q, false);
+            } else {
+				// onProcess()处理事件,并将结果和事件传递给apply()方法
+                apply(q, onProcess(q));
+            }
+        }
 
+- 子类没有重写过`deliver()`的逻辑
+
+- `deliver()`处理逻辑
+
+	1. 首先会判断事件是否已经结束,如果已经结束 则会将事件转发给下一个Stage进行处理
+
+	2. 判断事件是否需要被丢弃,即对视图的状态等进行检查
+
+	3. 调用`onProcess()`去处理事件,并将结果交给`apply()`去处理.(`onProcess()`方法多在子类中被重写)
+
+	
+
+## 5.2 InputStage.forward()
 
 	/**
-		1. `nestingLevel = 0`,表示被View自己调用
-		2. `nestingLevel = 1`,表示被View的子类调用
-
-		如果事件已经在更高级的nestingl中被检查,那么它将不用被重复检查
+	* 转发事件到下一阶段
 	*/
-    public void onTouchEvent(MotionEvent event, int nestingLevel) {
-		// 如果当前事件不是touch事件的最后一个cancel事件,返回true
-        if (!startEvent(event, nestingLevel, EVENT_TYPE_TOUCH)) {
-            return;
-        }
+	protected void forward(QueuedInputEvent q) {
+		onDeliverToNext(q);
+	}
 
-        final int action = event.getAction();
-		// 判断action是否是 按下,取消,越界中的一个
-        final boolean newStream = action == MotionEvent.ACTION_DOWN
-                || action == MotionEvent.ACTION_CANCEL || action == MotionEvent.ACTION_OUTSIDE;
-        if (newStream && (mTouchEventStreamIsTainted || mTouchEventStreamUnhandled)) {
-            mTouchEventStreamIsTainted = false;
-            mTouchEventStreamUnhandled = false;
-            mTouchEventStreamPointers = 0;
-        }
-        if (mTouchEventStreamIsTainted) {
-            event.setTainted(true);
-        }
+### 5.2.1 InputStage.onDeliverToNext()
 
-        try {
-            ensureMetaStateIsNormalized(event.getMetaState());
+	/**
+	* Called when an event is being delivered to the next stage.
+	*/
+	protected void onDeliverToNext(QueuedInputEvent q) {
+		// mNext 也是一个InputStage
+		// 简单的判断是否存在下一个InputStage ,如果存在就继续转发
+		if (mNext != null) {
+			mNext.deliver(q);
+		} else {
+			//不存在 就去回收事件
+			finishInputEvent(q);
+		}
+	}
 
-            final int deviceId = event.getDeviceId();
-            final int source = event.getSource();
+## 5.3 InputStage.finish()
 
-            if (!newStream && mTouchEventStreamDeviceId != -1
-                    && (mTouchEventStreamDeviceId != deviceId
-                            || mTouchEventStreamSource != source)) {
-                problem("Touch event stream contains events from multiple sources: "
-                        + "previous device id " + mTouchEventStreamDeviceId
-                        + ", previous source " + Integer.toHexString(mTouchEventStreamSource)
-                        + ", new device id " + deviceId
-                        + ", new source " + Integer.toHexString(source));
-            }
-            mTouchEventStreamDeviceId = deviceId;
-            mTouchEventStreamSource = source;
+	/**
+	* 给输入事件加上FLAG_FINISHED标记,并转发它到下一个Stage
+	*/
+	protected void finish(QueuedInputEvent q, boolean handled) {
+		q.mFlags |= QueuedInputEvent.FLAG_FINISHED;
+		if (handled) {
+			q.mFlags |= QueuedInputEvent.FLAG_FINISHED_HANDLED;
+		}
+		forward(q);
+	}
 
-            final int pointerCount = event.getPointerCount();
-            if ((source & InputDevice.SOURCE_CLASS_POINTER) != 0) {
-                switch (action) {
-                    case MotionEvent.ACTION_DOWN:
-                        if (mTouchEventStreamPointers != 0) {
-                            problem("ACTION_DOWN but pointers are already down.  "
-                                    + "Probably missing ACTION_UP from previous gesture.");
-                        }
-                        ensureHistorySizeIsZeroForThisAction(event);
-                        ensurePointerCountIsOneForThisAction(event);
-                        mTouchEventStreamPointers = 1 << event.getPointerId(0);
-                        break;
-                    case MotionEvent.ACTION_UP:
-                        ensureHistorySizeIsZeroForThisAction(event);
-                        ensurePointerCountIsOneForThisAction(event);
-                        mTouchEventStreamPointers = 0;
-                        mTouchEventStreamIsTainted = false;
-                        break;
-                    case MotionEvent.ACTION_MOVE: {
-                        final int expectedPointerCount =
-                                Integer.bitCount(mTouchEventStreamPointers);
-                        if (pointerCount != expectedPointerCount) {
-                            problem("ACTION_MOVE contained " + pointerCount
-                                    + " pointers but there are currently "
-                                    + expectedPointerCount + " pointers down.");
-                            mTouchEventStreamIsTainted = true;
-                        }
-                        break;
-                    }
-                    case MotionEvent.ACTION_CANCEL:
-                        mTouchEventStreamPointers = 0;
-                        mTouchEventStreamIsTainted = false;
-                        break;
-                    case MotionEvent.ACTION_OUTSIDE:
-                        if (mTouchEventStreamPointers != 0) {
-                            problem("ACTION_OUTSIDE but pointers are still down.");
-                        }
-                        ensureHistorySizeIsZeroForThisAction(event);
-                        ensurePointerCountIsOneForThisAction(event);
-                        mTouchEventStreamIsTainted = false;
-                        break;
-                    default: {
-                        final int actionMasked = event.getActionMasked();
-                        final int actionIndex = event.getActionIndex();
-                        if (actionMasked == MotionEvent.ACTION_POINTER_DOWN) {
-                            if (mTouchEventStreamPointers == 0) {
-                                problem("ACTION_POINTER_DOWN but no other pointers were down.");
-                                mTouchEventStreamIsTainted = true;
-                            }
-                            if (actionIndex < 0 || actionIndex >= pointerCount) {
-                                problem("ACTION_POINTER_DOWN index is " + actionIndex
-                                        + " but the pointer count is " + pointerCount + ".");
-                                mTouchEventStreamIsTainted = true;
-                            } else {
-                                final int id = event.getPointerId(actionIndex);
-                                final int idBit = 1 << id;
-                                if ((mTouchEventStreamPointers & idBit) != 0) {
-                                    problem("ACTION_POINTER_DOWN specified pointer id " + id
-                                            + " which is already down.");
-                                    mTouchEventStreamIsTainted = true;
-                                } else {
-                                    mTouchEventStreamPointers |= idBit;
-                                }
-                            }
-                            ensureHistorySizeIsZeroForThisAction(event);
-                        } else if (actionMasked == MotionEvent.ACTION_POINTER_UP) {
-                            if (actionIndex < 0 || actionIndex >= pointerCount) {
-                                problem("ACTION_POINTER_UP index is " + actionIndex
-                                        + " but the pointer count is " + pointerCount + ".");
-                                mTouchEventStreamIsTainted = true;
-                            } else {
-                                final int id = event.getPointerId(actionIndex);
-                                final int idBit = 1 << id;
-                                if ((mTouchEventStreamPointers & idBit) == 0) {
-                                    problem("ACTION_POINTER_UP specified pointer id " + id
-                                            + " which is not currently down.");
-                                    mTouchEventStreamIsTainted = true;
-                                } else {
-                                    mTouchEventStreamPointers &= ~idBit;
-                                }
-                            }
-                            ensureHistorySizeIsZeroForThisAction(event);
-                        } else {
-                            problem("Invalid action " + MotionEvent.actionToString(action)
-                                    + " for touch event.");
-                        }
-                        break;
-                    }
-                }
+## 5.4 InputStage.onProcess()
+
+	/**
+	* Called when an event is ready to be processed.
+	* @return A result code indicating how the event was handled.
+	*/
+	protected int onProcess(QueuedInputEvent q) {
+		return FORWARD;
+	}
+
+- 具体的逻辑都在其子类中被实现,默认的状态就是`FORWARD`,代表转发给下一个`Stage`去处理
+
+- 在`ViewRootImpl.setView()`中创建了几个`InputStage`,并进行了关联,不同类型的`InputStage`会去处理不同类型的事件
+
+### 5.4.1 ViewPostImeInputStage.onProcess()
+
+        @Override
+        protected int onProcess(QueuedInputEvent q) {
+			// 处理按键事件
+            if (q.mEvent instanceof KeyEvent) {
+                return processKeyEvent(q);
             } else {
-                problem("Source was not SOURCE_CLASS_POINTER.");
-            }
-        } finally {
-            finishEvent();
-        }
-    }
+                final int source = q.mEvent.getSource();
+				//处理触摸事件
+                if ((source & InputDevice.SOURCE_CLASS_POINTER) != 0) {
+                    return processPointerEvent(q);
+	
+				//处理轨迹球事件
+                } else if ((source & InputDevice.SOURCE_CLASS_TRACKBALL) != 0) {
+                    return processTrackballEvent(q);
 
+				// 处理其他Motion事件,如悬浮(Hover),游戏手柄等
+                } else {
+                    return processGenericMotionEvent(q);
+                }
+            }
+        }
+
+- 处理触摸事件的逻辑在`processPointerEvent()`之中
+
+### 5.4.2 ViewPostImeInputStage.processPointerEvent()
+
+	private int processPointerEvent(QueuedInputEvent q) {
+		
+		final MotionEvent event = (MotionEvent)q.mEvent;
+
+		mAttachInfo.mUnbufferedDispatchRequested = false;
+		mAttachInfo.mHandlingPointerEvent = true;
+		// 这一步将事件交给了View去派发
+		// mView 可知是 DecorView
+		boolean handled = mView.dispatchPointerEvent(event);
+		maybeUpdatePointerIcon(event);
+		maybeUpdateTooltip(event);
+		mAttachInfo.mHandlingPointerEvent = false;
+		if (mAttachInfo.mUnbufferedDispatchRequested && !mUnbufferedInputDispatch) {
+			mUnbufferedInputDispatch = true;
+			if (mConsumeBatchedInputScheduled) {
+                    scheduleConsumeBatchedInputImmediately();
+			}
+		}
+		//根据事件的处理结果 返回不同的结果
+		return handled ? FINISH_HANDLED : FORWARD;
+	}
+
+- `MotionEvent`是`InputEvent`的子类,用来表示移动事件(鼠标,笔,手指,轨迹球)
