--- a/Android源码分析/输入系统/输入事件的派发.md
+++ b/Android源码分析/输入系统/输入事件的派发.md
@@ -6,7 +6,7 @@
 
 控件树中的输入事件派发是由`ViewRootImpl`为起点,沿着控件树逐层传递给目标控件,最终再回到`ViewRootImpl`的一个环形过程
 
-事件派发的过程发生在创建`ViewRootImpl`的主线程中,但却独立与`ViewRootImpl.performTraversals()`之外,即输入事件的派发并不依赖于`ViewRootImpl`的`心跳`作为动力. **它的动力来源于`InputEventReceiver`的`Looper`,当一个输入事件被派发给`ViewRootImpl`所在的窗口时,`Looper`会被唤醒并触发`InputEventReceiver.onInputEvent()`回调,控件树的输入事件派发起始于这一回调.**
+事件派发的过程发生在创建`ViewRootImpl`的主线程中,但却独立于`ViewRootImpl.performTraversals()`之外,即输入事件的派发并不依赖于`ViewRootImpl`的`心跳`作为动力. **它的动力来源于`InputEventReceiver`的`Looper`,当一个输入事件被派发给`ViewRootImpl`所在的窗口时,`Looper`会被唤醒并触发`InputEventReceiver.onInputEvent()`回调,控件树的输入事件派发起始于这一回调.**
 
 
 # 2. 触摸模式和焦点
@@ -154,6 +154,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
     void handleFocusGainInternal(@FocusRealDirection int direction, Rect previouslyFocusedRect) {
 
+		//判断是否已经拥有焦点
         if ((mPrivateFlags & PFLAG_FOCUSED) == 0) {
 			//将PFLAG_FOCUSED加入mPrivateFlags中
 			// 这便表示此控件已经拥有焦点!
@@ -186,7 +187,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 `mParent.requestChildFocus()`方法是定义在`ViewParent`接口中的方法,其实现者为`ViewGroup`和`ViewRootImpl`.
 
-- `ViewGroup`实现的目的之一就是将焦点从上一个焦点控件手中夺走, 即将`PFLAG_FOCUSED`标记从控件的`mPrivateFlags`中移除
+- **`ViewGroup`实现的目的之一就是将焦点从上一个焦点控件手中夺走**, 即将`PFLAG_FOCUSED`标记从控件的`mPrivateFlags`中移除
 
 - 另外一个目的是 将这一操作继续向控件树的根部进行回溯,直到`ViewRootImpl`,`ViewRootImpl`的`requestChildFocus()`方法会将焦点控件保存起来备用,并引发一次遍历
 
@@ -194,7 +195,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
     @Override
     public void requestChildFocus(View child, View focused) {
-
+		// 父类阻止子类获取焦点
         if (getDescendantFocusability() == FOCUS_BLOCK_DESCENDANTS) {
             return;
         }
@@ -225,7 +226,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         }
     }
 
-- 如果是`View`调用了`mParent.requestChildFocus()`,则在`ViewGroup.requestChildFocus()`方法中,`mFocused`并不会被赋值
+- ~~如果是`View`调用了`mParent.requestChildFocus()`,则在`ViewGroup.requestChildFocus()`方法中,`mFocused`并不会被赋值~~
 
 - `ViewGroup.requestChildFocus()`方法包含了新的焦点体系的建立过程,以及旧的焦点体系的销毁过程
 
@@ -279,9 +280,9 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 3. `ViewGroup2`的`mFocused`指向了`View2-2`,于是调用了`ViewGroup2-2`的`unFocus()`进行旧的焦点体系的销毁. 
 
-4. `ViewGroup2-2`的`unFocus()`将此操作传递给`View2-2-2`的`unFocus()`以移除`View2-2-2`的`PFLAG_FOCUSED`标记,并将其`mFocused`置空
+4. `ViewGroup2-2`的`unFocus()`将此操作传递给`View2-2-2`的`unFocus()`以移除`View2-2-2`的`PFLAG_FOCUSED`标记,并将自身的`mFocused`置空
 
-5. `ViewGroup2-2`销毁了旧的焦点体系之后,回到`ViewGroup2`将`mFocused`置为`View2-1-1`
+5. `ViewGroup2-2`销毁了旧的焦点体系之后,回到`ViewGroup2`将`mFocused`置为`View2-1`
 
 
 - `View`类有俩个查询控件焦点状态的方法,
@@ -302,7 +303,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
         switch (descendantFocusability) {
             case FOCUS_BLOCK_DESCENDANTS:
-				// ViewGroup 将会阻止所有子控件获取焦点,于是调用View.requestFocus()尝试自己获取焦点
+				// ViewGroup 将会阻止所有子控件获取焦点,同时调用View.requestFocus()尝试自己获取焦点
                 return super.requestFocus(direction, previouslyFocusedRect);
             case FOCUS_BEFORE_DESCENDANTS: {
 				//ViewGroup 将有优先于子控件获取焦点的权利
