--- a/Android源码分析/输入系统/输入事件的派发.md
+++ b/Android源码分析/输入系统/输入事件的派发.md
@@ -11,7 +11,7 @@
 
 # 2. 触摸模式和焦点
 
-Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间自由切换
+Android同时支持**按键与触摸**俩种操作方式,并且可以在俩者之间自由切换
 
 可以获取焦点的控件分为俩类:
 
@@ -66,7 +66,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 - 当调用的控件为View时,表示期望此View能够获取焦点
 
-- 当调用的控件为ViewGroup时,则会根据一定的焦点选择策略选择一个子控件或者ViewGroup本身作为焦点
+- 当调用的控件为ViewGroup时,则会根据一定的焦点选择策略选择一个子控件或者ViewGroup本身作为焦点持有者
 
 
 **当控件树被添加到`ViewRootImpl`之后,也会调用`ViewRootImpl.requestFocus()`设置初始的焦点**
@@ -77,7 +77,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         return requestFocus(View.FOCUS_DOWN);
     }
 
-- `View.FOCUS_DOWN`表示焦点的寻找方向. 当本控件是一个`ViewGroup`时将会从左上角开始沿着这个方向查找可以获取焦点的子控件,由于当前分析的是控件为View的情况,所以该参数无效
+- `View.FOCUS_DOWN`表示焦点的寻找方向. 当本控件是一个`ViewGroup`时将会从自身的`View[] mChildren`成员变量中按照顺序去查找,由于当前分析的是控件为`View`的情况,所以该参数无效
 
 
     public final boolean requestFocus(int direction) {
@@ -111,7 +111,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         }
 
         // need to not have any parents blocking us
-		// 判断是否存在任意父控件的DescendantFocusability取值为FOCUS_BLOCK_DESCENDANTS,意义为阻止此控件获取焦点
+		// 判断是否存在任意父控件的DescendantFocusability取值为FOCUS_BLOCK_DESCENDANTS,意义为父类阻止此控件获取焦点
         if (hasAncestorThatBlocksDescendantFocus()) {
             return false;
         }
@@ -132,7 +132,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 	**当控件处于触摸模式时,仅当拥有`FOCUSABLE_IN_TOUCH_MODE`标记的控件才能获取焦点**
 
 2. 控件能否获取焦点还取决于其父控件的特性`DescendantFocusability`,这一特性描述了子控件与父控件之间的焦点获取策略
-
+ 
 	`DescendantFocusability`存在三种取值,例如在`FOCUS_BLOCK_DESCENDANTS`时 父控件会阻止子控件获取焦点
 
 
@@ -176,7 +176,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
             }
 			//通知对此控件焦点变换感兴趣的监听者
             onFocusChanged(true, direction, previouslyFocusedRect);
-			//更新控件的Drawable状态.是的控件在绘制中出现高亮显示
+			//更新控件的Drawable状态.使得控件在绘制中出现高亮显示
             refreshDrawableState();
         }
     }
@@ -215,18 +215,16 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
             }
 			//新焦点体系的建立
 			// 设置mFocused为child
-			// child参数并不是实际拥有焦点的控件,而是此ViewGroup的直接子控件,同时它是实际拥有焦点的控件的父控件
+			// child参数有时并不是实际拥有焦点的控件,而是实际拥有焦点的控件的父控件
             mFocused = child;
         }
 			
 		// 将这一操作继续向控件树的根部回溯
-		// 此时 child参数是 此VIewGroup,而不是实际拥有焦点的focused
+		// 此时 child参数是 此ViewGroup,而不是实际拥有焦点的focused
         if (mParent != null) {
             mParent.requestChildFocus(this, focused);
         }
     }
-
-- ~~如果是`View`调用了`mParent.requestChildFocus()`,则在`ViewGroup.requestChildFocus()`方法中,`mFocused`并不会被赋值~~
 
 - `ViewGroup.requestChildFocus()`方法包含了新的焦点体系的建立过程,以及旧的焦点体系的销毁过程
 
@@ -276,7 +274,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 1. 当`View2-1-1`通过`View.requestFocus()`尝试获取焦点时,首先会将`PFLAG_FOCUSED`标记加入其成员`mPrivateFlags`中,以声明其拥有焦点
 
-2. 然后调用`ViewGrou2-1`的`requestChildFocus()`,此时`2-1`会通过`unFocus()`销毁旧的焦点体系,但是由于其`mFocused`为null,它无法进行销毁旧的焦点体系.同时它将`mFocused`设置为`View2-1-1`,并将调用`ViewGroup2`的`requestChildFocus()`
+2. 然后调用`ViewGrou2-1`的`requestChildFocus()`,此时`2-1`会通过`unFocus()`销毁旧的焦点体系,但是由于其`mFocused`为null,它无法进行销毁旧的焦点体系,之后它将`mFocused`设置为`View2-1-1`.最后继续回溯,去调用`ViewGroup2`的`requestChildFocus()`
 
 3. `ViewGroup2`的`mFocused`指向了`View2-2`,于是调用了`ViewGroup2-2`的`unFocus()`进行旧的焦点体系的销毁. 
 
@@ -371,7 +369,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 # 4. 输入事件派发的综述
 
-已知Android输入系统派发的终点是`InputEventReceiver`(根据深入理解Android第五章得出),那么作为控件系统最高级别的管理者`ViewRootImpl`,其便是`InputEventReceiver`的一个用户,它从`InputEventReceiver`中获取事件,然后将它们按照一定流程派发给所有感兴趣的对象,包括`View,PhoneWindow,Activity,Dialog`等,因此从`InputEventReceiver.onInputEvent()`开始讨论
+**已知Android输入系统派发的终点是`InputEventReceiver`**(根据深入理解Android第五章得出),那么作为控件系统最高级别的管理者`ViewRootImpl`,其便是`InputEventReceiver`的一个用户,它从`InputEventReceiver`中获取事件,然后将它们按照一定流程派发给所有感兴趣的对象,包括`View,PhoneWindow,Activity,Dialog`等,因此从`InputEventReceiver.onInputEvent()`开始讨论
 
 
 在`ViewRootImpl.setView()`方法中,会利用WMS分配的`InputChannel`以及当前线程的`Looper`创建`InputEventReceiver`的子类`WindowInputEventReceiver`的一个实例,并保存在`ViewRootImpl.mInputEventReceiver`中.
@@ -464,7 +462,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
         @Override
         public void onInputEvent(InputEvent event, int displayId) {
 			// 将输入事件入队
-			// 注意第三个参数为true
+			// 注意第四个参数为true
             enqueueInputEvent(event, this, 0, true);
         }
 
@@ -493,7 +491,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 		//将InputEvent 和对应的InputEventReceiver 封装为一个QueuedInputEvent
         QueuedInputEvent q = obtainQueuedInputEvent(event, receiver, flags);
 
-     	//将新建的QueuedInputEvent 追加到mPendingInputEventTail所表示的单向链表中
+     	//将新建的QueuedInputEvent 追加到mPendingInputEventTail所表示的单向链表尾部
 		// ViewRootImpl 将会沿着链表从头到尾的逐个处理输入事件
         QueuedInputEvent last = mPendingInputEventTail;
 		//待处理事件尾部为空,说明这是第一次处理这个事件
@@ -503,6 +501,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 			//待处理事件的尾部 赋值
             mPendingInputEventTail = q;
         } else {
+			// 建立链表关系
             last.mNext = q;
 			//更新待处理事件尾部
             mPendingInputEventTail = q;
@@ -527,9 +526,12 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
     private QueuedInputEvent obtainQueuedInputEvent(InputEvent event,
             InputEventReceiver receiver, int flags) {
+		// 复用对象
         QueuedInputEvent q = mQueuedInputEventPool;
         if (q != null) {
+			// 输入事件池中的数量
             mQueuedInputEventPoolSize -= 1;
+			// 置为链表中的下一个输入事件
             mQueuedInputEventPool = q.mNext;
             q.mNext = null;
         } else {
@@ -581,10 +583,11 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 			// mFirstInputStage  =   NativePreImeInputStage
             stage = q.shouldSkipIme() ? mFirstPostImeInputStage : mFirstInputStage;
         }
-
+		// 执行事件分发
         if (stage != null) {
             stage.deliver(q);
         } else {
+			//结束事件分发
             finishInputEvent(q);
         }
     }
@@ -598,6 +601,7 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
             return false;
         }
+
 - 判断`mFlags`中是否存在`FLAG_UNHANDLED`标记
 
 ### 4.2.2 QueuedInputEvent.shouldSkipTme()
@@ -667,9 +671,9 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 
 - `deliver()`处理逻辑
 
-	1. 首先会判断事件是否已经结束,如果已经结束 则会将事件转发给下一个Stage进行处理
+	1. 首先会判断事件是否已经结束,如果已经结束 则会将事件转发给下一个`Stage`进行处理
 
-	2. 判断事件是否需要被丢弃,即对视图的状态等进行检查
+	2. 判断事件是否需要被丢弃,即对视图的状态,焦点状态等进行检查
 
 	3. 调用`onProcess()`去处理事件,并将结果交给`apply()`去处理.(`onProcess()`方法多在子类中被重写)
 
@@ -703,13 +707,15 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 ## 5.3 InputStage.finish()
 
 	/**
-	* 给输入事件加上FLAG_FINISHED标记,并转发它到下一个Stage
+	* 给输入事件加上`FLAG_FINISHED`标记,并转发它到下一个Stage
 	*/
 	protected void finish(QueuedInputEvent q, boolean handled) {
 		q.mFlags |= QueuedInputEvent.FLAG_FINISHED;
 		if (handled) {
+			// 表示处理成功
 			q.mFlags |= QueuedInputEvent.FLAG_FINISHED_HANDLED;
 		}
+		//去转发
 		forward(q);
 	}
 
@@ -778,3 +784,5 @@ Android同时支持按键与触摸俩种操作方式,并且可以在俩者之间
 	}
 
 - `MotionEvent`是`InputEvent`的子类,用来表示移动事件(鼠标,笔,手指,轨迹球)
+
+# 6. View中的事件分发
