--- a/Android源码分析/windowmanager/视图添加流程.md
+++ b/Android源码分析/windowmanager/视图添加流程.md
@@ -1,4 +1,4 @@
-# ViewRootImpl绘制流程分析
+# 视图添加流程
 
 [Android开发艺术探索]()
 
@@ -13,11 +13,13 @@
 
 # 1. 简介
 
+**主要介绍DecorView被创建之后,如何被添加到Window中,并显示的一系列相关流程,主要以`ViewRootImpl`进行分析**
+
 从`Window`的相关文章中得知,在`ActivityThread`的`performLaunchActivity()`中,会回调`Activity`的`onCreate()`方法,而`onCreate()`方法正是调用`setContentView()`的地方,但是在这里仅仅只是创建了`DecorView`
 
 真正将`DecorView`添加到`Window`并进行关联的过程是在`ActivityThread.handleResumeActivity()`中
 
-**重点分析`ViewRootImpl`类**
+
 
 # 2. 顶层DecorView添加到窗口的过程
 
@@ -275,6 +277,7 @@
 	
 			final Configuration config = mContext.getResources().getConfiguration();
 
+			// 判断是使用屏幕的大小,还是使用配置中的大小
 			if (shouldUseDisplaySize(lp)) {
 				//为状态栏设置desiredWindowWidth/Height,其取值是屏幕尺寸
 				Point size = new Point();
