--- a/Android源码分析/windowmanager/视图添加流程.md
+++ b/Android源码分析/windowmanager/视图添加流程.md
@@ -15,7 +15,7 @@
 
 **主要介绍DecorView被创建之后,如何被添加到Window中,并显示的一系列相关流程,主要以`ViewRootImpl`进行分析**
 
-从`Window`的相关文章中得知,在`ActivityThread`的`performLaunchActivity()`中,会回调`Activity`的`onCreate()`方法,而`onCreate()`方法正是调用`setContentView()`的地方,但是在这里仅仅只是创建了`DecorView`
+从`Window`的相关文章中得知,在`ActivityThread`的`performLaunchActivity()`中,会回调`Activity`的`onCreate()`方法,而`onCreate()`方法正是调用`setContentView()`的地方,**但是在这里仅仅只是创建了`DecorView`**
 
 真正将`DecorView`添加到`Window`并进行关联的过程是在`ActivityThread.handleResumeActivity()`中
 
@@ -79,7 +79,7 @@
 		..........
 			//创建ViewRootImpl
             root = new ViewRootImpl(view.getContext(), display);
-            view.setLayoutParams(wparams);
+            view.setLayoutParams(params);
 
             mViews.add(view);
             mRoots.add(root);
@@ -92,7 +92,7 @@
             }
 	}
 
-- 创建`ViewRootImpl`,并开始对`PhoneWindow`中的`DecorView`进行操作.将`DecorView`设置给`ViewRootImp`,通过`ViewRootImpl`来更新界面并完成`Window`的添加过程
+- **`ViewRootImpl`在这里被创建**,并开始对`PhoneWindow`中的`DecorView`进行操作.将`DecorView`设置给`ViewRootImp`,通过`ViewRootImpl`来更新界面并完成`Window`的添加过程
 
 - 将`Window`所对应的`View,ViewRootImpl,LayoutParams`分别添加到`WindowManager`的集合中
 
@@ -101,6 +101,7 @@
 
 	 public void setView(View view, WindowManager.LayoutParams attrs, View panelParentView) {
 	        synchronized (this) {
+			// mView 即DecorView
          	if (mView == null) {
                 //ViewRootImpl成员变量view进行复制，以后操作的都是mView。
                 mView = view;
@@ -144,6 +145,8 @@
             }
 	      }
 	 }
+
+- 在`ViewRootImpl`处理系统的事件之前,先将布局处理好
 
 - 在方法的最后调用了`view.assignParent()`,即将`ViewRootImpl`设置给了`DecorView`,作为其父类存在
 
@@ -227,7 +230,7 @@
 
 2. 布局窗口阶段
 
-	根据预测量的结果，通过`IWindowSession.relayout()`方法向WMS请求调整窗口的尺寸等属性，这将引发WMS对窗口进行重新布局，并将布局结果返回给ViewRootImpl。
+	根据预测量的结果，通过`IWindowSession.relayout()`方法向WMS请求调整窗口的尺寸等属性，这将引发WMS对窗口进行重新布局，并将布局结果返回给`ViewRootImpl`
 
 3. 最终测量阶段
 
@@ -244,7 +247,7 @@
 ## 3.1 ViewRootImpl.performTraversals()
 
 	private void performTraversals() {
-		//mView就是DecorView,在WMG中VRI被创建,并传入了DV
+		//mView就是DecorView,在WMG中VRI被创建,并传入了DecorView
 		//保存在局部变量中,以提高访问效率
 		final View host = mView;
 		//非空,是否已经添加
@@ -278,6 +281,7 @@
 			final Configuration config = mContext.getResources().getConfiguration();
 
 			// 判断是使用屏幕的大小,还是使用配置中的大小
+			// 例如如果mView对应的LayoutParams是属于 由状态栏下滑拉出的面板
 			if (shouldUseDisplaySize(lp)) {
 				//为状态栏设置desiredWindowWidth/Height,其取值是屏幕尺寸
 				Point size = new Point();
