--- a/AOP/插件化/动态加载.md
+++ b/AOP/插件化/动态加载.md
@@ -16,7 +16,7 @@
 
 3. 更换静态资源(比如更换启动图，换主题，或者用服务器参数开关控制广告的显示灯)**不属于**动态加载
 
-4. Android中动态加载的核心思想是动态调用外部的dex文件，特殊情况下，Android APK 自身带有的Dex文件可能只是一个程序的入口(即只含有ProxyActivity),所有具体的功能都是从服务器下载下来的最新的dex文件来实现
+4. Android中动态加载的核心思想是动态调用外部的dex文件，特殊情况下，Android APK 自身带有的Dex文件可能只是一个程序的入口(即只含有`ProxyActivity`),所有具体的功能都是从服务器下载下来的最新的dex文件来实现
 
 
 # 2. 类型
