--- a/mixpanel分析/相关知识点.md
+++ b/mixpanel分析/相关知识点.md
@@ -6,6 +6,8 @@
 
 [Java并发编程：Callable、Future和FutureTask](https://www.cnblogs.com/dolphin0520/p/3949310.html)
 
+[Runnable 和Callbale的区别](https://blog.csdn.net/bboyfeiyu/article/details/24851847)
+
 
 # 2. TalkingDate灵动分析
 
