--- a/HTML/JavaScript/异步操作/异步操作概述.md
+++ b/HTML/JavaScript/异步操作/异步操作概述.md
@@ -58,7 +58,7 @@ JavaScript 之所以采用单线程，而不是多线程，跟历史有关系。
 
 ## 4.1 回调函数
 
-回调函数是异步操作最基本的方法
+**通过回调函数实现异步操作是基本的方法**
 
 1. 优点是简单、容易理解和实现
 2. 缺点是不利于代码的阅读和维护，各个部分之间高度耦合（coupling），使得程序结构混乱、流程难以追踪（尤其是多个回调函数嵌套的情况），而且每个任务只能指定一个回调函数。
@@ -93,13 +93,12 @@ JavaScript 之所以采用单线程，而不是多线程，跟历史有关系。
 
 ## 4.2 事件监听
 
-采用事件驱动模式。异步任务的执行不取决于代码的顺序，而取决于某个事件是否发生。
+通过事件驱动模式实现异步操作
 
-还是以f1和f2为例。首先，为f1绑定一个事件（这里采用的 jQuery 的写法）。
+- 异步任务的执行不取决于代码的顺序，而取决于某个事件是否发生。
 
-f1.on('done', f2);
-上面这行代码的意思是，当f1发生done事件，就执行f2。然后，对f1进行改写：
-	
+示例(为f1绑定一个事件（这里采用的 jQuery 的写法）)
+
 	function f1() {
 	  setTimeout(function () {
 	    // ...
@@ -107,6 +106,195 @@ f1.on('done', f2);
 	  }, 1000);
 	}
 
-上面代码中，f1.trigger('done')表示，执行完成后，立即触发done事件，从而开始执行f2。
+	f1.on('done', f2);
+
+- 当f1发生done事件，就执行f2。然后，对f1进行改写
+
+	上面代码中，`f1.trigger('done')`表示，执行完成后，立即触发done事件，从而开始执行f2。
 
 这种方法的优点是比较容易理解，可以绑定多个事件，每个事件可以指定多个回调函数，而且可以“去耦合”（decoupling），有利于实现模块化。缺点是整个程序都要变成事件驱动型，运行流程会变得很不清晰。阅读代码的时候，很难看出主流程。
+
+
+## 4.3 发布/订阅
+
+使用”发布/订阅模式”（publish-subscribe pattern）实现异步操作，又称“观察者模式”（observer pattern）
+
+- 事件完全可以理解成“信号”，如果存在一个“信号中心”，某个任务执行完成，就向信号中心“发布”（publish）一个信号，其他任务可以向信号中心“订阅”（subscribe）这个信号，从而知道什么时候自己可以开始执行。。
+
+这个模式有多种实现，下面采用的是 Ben Alman 的 Tiny Pub/Sub，这是 jQuery 的一个插件。
+
+1. f2向信号中心jQuery订阅done信号。
+
+		jQuery.subscribe('done', f2);
+
+2. f1进行如下改写。
+
+		function f1() {
+		  setTimeout(function () {
+		    // ...
+		    jQuery.publish('done');
+		  }, 1000);
+		}
+
+	- 上面代码中，`jQuery.publish('done')`的意思是，f1执行完成后，向信号中心jQuery发布done信号，从而引发f2的执行。
+
+3. f2完成执行后，可以取消订阅（unsubscribe）。
+
+	jQuery.unsubscribe('done', f2);
+
+
+这种方法的性质与“事件监听”类似，但是明显优于后者。因为可以通过查看“消息中心”，了解存在多少信号、每个信号有多少订阅者，从而监控程序的运行。
+
+
+# 5. 异步操作的流程控制
+
+如果有多个异步操作，就存在一个流程控制的问题：**如何确定异步操作执行的顺序，以及如何保证遵守这种顺序**。
+
+
+存在函数`async`异步执行,等待一秒后调用回调函数. 如果存在六个这样的异步任务,要求这六个异步任务都执行结束之后才能执行函数`final`,如何实现??
+
+	function async(arg, callback) {
+	  console.log('参数为 ' + arg +' , 1秒后返回结果');
+	  setTimeout(function () { callback(arg * 2); }, 1000);
+	}
+
+	function final(value) {
+	  console.log('完成: ', value);
+	}
+	
+	async(1, function (value) {
+	  async(2, function (value) {
+	    async(3, function (value) {
+	      async(4, function (value) {
+	        async(5, function (value) {
+	          async(6, final);
+	        });
+	      });
+	    });
+	  });
+	});
+	// 参数为 1 , 1秒后返回结果
+	// 参数为 2 , 1秒后返回结果
+	// 参数为 3 , 1秒后返回结果
+	// 参数为 4 , 1秒后返回结果
+	// 参数为 5 , 1秒后返回结果
+	// 参数为 6 , 1秒后返回结果
+	// 完成:  12
+
+- 这种嵌套的写法十分麻烦,容易出错
+
+## 5.1 串行执行
+
+编写一个流程控制函数专门用来控制异步任务的执行顺序,使其串行执行(一个接一个的执行)
+
+	var items = [ 1, 2, 3, 4, 5, 6 ];
+	var results = [];
+	
+	function async(arg, callback) {
+	  console.log('参数为 ' + arg +' , 1秒后返回结果');
+	  setTimeout(function () { callback(arg * 2); }, 1000);
+	}
+	
+	function final(value) {
+	  console.log('完成: ', value);
+	}
+	
+	function series(item) {
+	  // 非空,判断异步任务是否全部执行完毕
+	  if(item) {
+		// 异步执行任务
+	    async( item, function(result) {
+		  // 回调函数中记录 函数async的执行结果
+	      results.push(result);
+		  // 开始下一个异步任务
+	      return series(items.shift());
+	    });
+	  } else {
+		// 异步任务全部结束, 取出最后一个异步任务的执行结果,调用函数final
+	    return final(results[results.length - 1]);
+	  }
+	}
+	
+	series(items.shift());
+
+- 上面代码中，函数series就是串行函数，它会依次执行异步任务，所有任务都完成后，才会执行final函数。items数组保存每一个异步任务的参数，results数组保存每一个异步任务的运行结果。
+
+	这种写法需要六秒才能完整整个脚本
+
+## 5.2 并行执行
+
+流程控制函数也可以是并行执行，即所有异步任务同时执行，等到全部完成以后，才执行final函数。
+
+	var items = [ 1, 2, 3, 4, 5, 6 ];
+	var results = [];
+	
+	function async(arg, callback) {
+	  console.log('参数为 ' + arg +' , 1秒后返回结果');
+	  setTimeout(function () { callback(arg * 2); }, 1000);
+	}
+	
+	function final(value) {
+	  console.log('完成: ', value);
+	}
+	// 同时开启六个异步任务
+	items.forEach(function(item) {
+	  async(item, function(result){
+		// 改变results
+	    results.push(result);
+		// 每个异步任务的回调都去判断是否执行完毕
+	    if(results.length === items.length) {
+	      final(results[results.length - 1]);
+	    }
+	  })
+	});
+
+- 上面代码中，forEach方法会同时发起六个异步任务，等到它们全部完成以后，才会执行final函数。
+
+相比而言，上面的写法只要一秒，就能完成整个脚本。
+
+- 这就是说，**并行执行的效率较高，比起串行执行一次只能执行一个任务，较为节约时间。但是问题在于如果并行的任务较多，很容易耗尽系统资源，拖慢运行速度**。因此有了第三种流程控制方式。
+
+
+## 5.3 并行和串行的结合
+
+所谓并行与串行的结合，就是设置一个门槛，每次最多只能并行执行n个异步任务，这样就避免了过分占用系统资源。
+
+
+	var items = [ 1, 2, 3, 4, 5, 6 ];
+	var results = [];
+	var running = 0;
+	var limit = 2;
+	
+	function async(arg, callback) {
+	  console.log('参数为 ' + arg +' , 1秒后返回结果');
+	  setTimeout(function () { callback(arg * 2); }, 1000);
+	}
+	
+	function final(value) {
+	  console.log('完成: ', value);
+	}
+	
+	function launcher() {
+	  while(running < limit && items.length > 0) {
+	    var item = items.shift();
+			// 执行异步任务
+		    async(item, function(result) {
+		      results.push(result);
+		      running--;
+			      if(items.length > 0) {
+			        launcher();
+			      } else if(running == 0) {
+			        final(results);
+			      }
+		    });
+	    running++;
+	  }
+	}
+	
+	launcher();
+
+- 变量running记录当前正在运行的任务数，只要低于门槛值，就再启动一个新的任务，如果等于0，就表示所有任务都执行完了，这时就执行final函数。
+
+
+这段代码需要三秒完成整个脚本，处在串行执行和并行执行之间。通过调节limit变量，达到效率和资源的最佳平衡。
+
