--- a/Gradle学习/运行Gradle构建/订制执行逻辑/配置构建环境-1.md
+++ b/Gradle学习/运行Gradle构建/订制执行逻辑/配置构建环境-1.md
@@ -22,9 +22,152 @@ Gradle提供了多种机制来配置Gradle本身和特定项目的行为
 
 Gradle提供了几个选项，可以配置用于执行构建的Java进程。虽然可以通过`GRADLE_OPTS`或`JAVA_OPTS`在本地环境中配置这些选项，但是在版本控制中存储某些设置(如JVM内存配置和JAVA home location)是很有用的，因为这样整个团队就可以使用一致的环境
 
-设置一致的环境非常简单，只需将这些设置放置到`gradle.properties`文件中即可。配置按以下顺序应用(如果一个选项在多个位置配置，最后一个将覆盖前面所有)
+设置一致的环境非常简单，只需将这些设置放置到`gradle.properties`文件中即可。配置按以下顺序应用(如果一个选项在多个位置配置，优先级由低到高)
+
+1. 项目根目录下的`gradle.properties`
+
+2. `GRADLE_USER_HOME`目录下的`gradle.properties`
+
+3. 系统属性,例如通过命令行设置的`-Dgradle.user.home`
+
+## 2.1 可用于配置Gradle构建环境的属性
+
+仅列举几个常用的，剩余的可以在[Gradle properties](https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties)中查看
+
+1. `org.gradle.caching=(true,false)`
+
+	设置为true时，Gradle将尽可能重用任何先前构建的任务输出，从而使构建速度更快	
+
+2. `org.gradle.jvmargs=(JVM arguments)`
+
+	指定用于Gradle守护程序的JVM参数。 该设置对于为构建性能配置JVM内存设置特别有用。 这不会影响Gradle客户端VM的JVM设置。
+
+## 2.2 使用`gradle.properties`文件设置属性
+
+	// gradle.properties
+	gradlePropertiesProp=gradlePropertiesValue
+	sysProp=shouldBeOverWrittenBySysProp
+	systemProp.system=systemValue
+
+	task printProps {
+	    doLast {
+	        println commandLineProjectProp
+	        println gradlePropertiesProp
+	        println systemProjectProp
+	        println System.properties['system']
+	    }
+	}
+
+	$ gradle -q -PcommandLineProjectProp=commandLineProjectPropValue -Dorg.gradle.project.systemProjectProp=systemPropertyValue printProps
+	commandLineProjectPropValue
+	gradlePropertiesValue
+	systemPropertyValue
+	systemValue
 
 
+# 3. 系统属性
+
+Gradle支持通过使用`-D`命令行选项，可以将系统属性传递给运行Gradle的JVM
+
+- Gradle命令的`-D`选项与java命令的`-D`选项具有相同的效果。
+
+- Gradle还支持在`gradle.properties`文件中使用前缀`systemProp`设置系统属性
+
+## 3.1 在`gradle.properties`中指定系统属性
+	
+	// gradle.properties
+	systemProp.gradle.wrapperUser=myuser
+	systemProp.gradle.wrapperPassword=mypassword
+
+## 3.2 可用的系统属性
+
+**注意:命令行选项优先于系统属性**
+
+1. `gradle.wrapperUser=(myuser)`
+
+	指定用户名,为了使用HTTP基本身份验证从服务器下载Gradle分发
+
+2. `gradle.wrapperPassword=(mypassword)`
+
+	指定密码,为了使用HTTP基本身份验证从服务器下载Gradle分发
+
+3. `gradle.user.home=(path to directory)`
+
+	指定Gradle的用户主目录
+
+在多项目构建中，`systemProp.properties`仅在根项目中生效。也就是说，只会检查根项目的`gradle.properties`文件，以查找以`systemProp.`前缀开头的属性
 
 
+# 4. 环境变量
+
+下面的环境变量可用于设置`gradle`命令
+
+- **注意:命令行选项和系统属性优先于环境变量中的属性**
+
+1. `GRADLE_OPTS`
+
+	指定启动Gradle客户端VM时要使用的JVM参数。 客户端VM仅处理命令行输入/输出，因此很少需要更改其VM选项。 实际构建由Gradle守护程序运行，该守护程序不受此环境变量的影响。
+
+2. `GRADLE_USER_HOME`
+
+	指定Gradle用户主目录（如果未设置，则默认为`$USER_HOME/.gradle`）
+
+3. `JAVA_HOME`
+
+	指定用于客户端VM的JDK安装目录。 此VM也用于守护程序，除非使用`org.gradle.java.home`属性在Gradle属性文件中指定了另一个
+	
+	
+# 5. 项目属性
+
+Gradle支持通过`-P`命令行选项直接向项目对象添加属性
+
+当Gradle检查特定名称的系统属性或者环境变量时，也会设置项目属性.例如当Gradle检查到类似`ORG_GRADLE_PROJECT_prop=somevalue`的名称，就会设置`prop`属性. 系统属性与环境变量相似，但是使用另外一种特定名称规则,例如`org.gradle.project.prop`形式
+
+## 5.1 通过系统属性设置项目属性
+
+	org.gradle.project.foo=bar
+
+## 5.2 通过环境变量设置项目属性
+
+	ORG_GRADLE_PROJECT_foo=bar
+
+
+## 5.3 注意点
+
+**用户主目录中的属性文件优先于项目目录中的属性文件**
+
+Gradle支持使用名称来访问构建脚本中的项目属性，就像使用变量一样
+
+如果引用了项目属性但该项属性不存在，则将引发异常并且构建将失败
+
+- 因此需要先使用`Project.hasProperty（java.lang.String）`方法访问它们之前检查是否存在该项目属性
+
+# 6. 配置JVM内存
+
+可以通过以下方式为Gradle调整JVM选项
+
+# 7. 使用项目属性对任务配置
+
+可以根据调用时指定的项目属性更改任务的行为
+
+## 7.1 阻止除了CI外的release
+
+假设您希望确保发布构建只由CI触发。处理此问题的一个简单方法是通过`isCI`项目属性
+
+	task performRelease {
+	    doLast {
+	        if (project.hasProperty("isCI")) {
+	            println("Performing release actions")
+	        } else {
+	            throw new InvalidUserDataException("Cannot perform release outside of CI")
+	        }
+	    }
+	}
+
+
+	> gradle performRelease -PisCI=true --quiet
+	Performing release actions
+
+
+# 8. 通过代理访问网络
 
